--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,8 @@
 	path = OCA/web
 	url = git@github.com:OCA/web.git
 	branch = 12.0
+
+[submodule "OCA/product-pack"]
+	path = OCA/product-pack
+	url = git@github.com:OCA/product-pack.git
+	branch = 12.0
