--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,8 @@
 	path = OCA/product-pack
 	url = git@github.com:OCA/product-pack.git
 	branch = 12.0
+
+[submodule "OCA/reporting-engine"]
+	path = OCA/reporting-engine
+	url = git@github.com:OCA/reporting-engine.git
+	branch = 12.0
