--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = OCA/product-pack
 	url = git@github.com:OCA/product-pack.git
 	branch = 12.0
+
+[submodule "OCA/sale-workflow"]
+	path = OCA/sale-workflow
+	url = git@github.com:OCA/sale-workflow.git
+	branch = 12.0
